@@ -2,6 +2,8 @@ Revision history for Graphics-Primitive
 
 0.39
   - POD fixes
+  - Don't short-circuit TextBox prepare if there are lines or a layout.
+  - If there's no layout, don't try and create one.  This breaks things.
 
 0.38
   - Fix error in Component->outside_width
